--- a/lectures/q2-13-02-19.tex
+++ b/lectures/q2-13-02-19.tex
@@ -78,16 +78,16 @@ with $\mathcal{O}(1)$ ``step 0'', $\mathcal{O}(\lambda)$ ``step 1'', $\mathcal{O
 \paragraph{Step 1} multiply by $\bra{\psi_{m}^{(0)}}$
 \begin{dgroup*}[]
 	\begin{dmath*}[]
-	\sand{\psi_{m}^{(0)}}{H_0-E_{n}^{(0)}}{\psi_{n}^{(1)}}+\sand{\psi_{m}^{(0)}}{V-E_{n}^{(1)}}{\psi_{n}^{(0)}}=0
+	\ev{\psi_{m}^{(0)}}{H_0-E_{n}^{(0)}}{\psi_{n}^{(1)}}+\ev{\psi_{m}^{(0)}}{V-E_{n}^{(1)}}{\psi_{n}^{(0)}}=0
 	\end{dmath*}
 	\begin{dmath*}[]
-		\hiderel{=}\left( E_{m}^{(0)}-E_{n}^{(0)} \right)\braket{\psi_{m}^{(0)}}{\psi_{n}^{(1)}}+\sand{\psi_{m}^{(0)}}{V}{\psi_{n}^{(0)}}-E_{n}^{(1)}\delta_{mn}=0
+		\hiderel{=}\left( E_{m}^{(0)}-E_{n}^{(0)} \right)\braket{\psi_{m}^{(0)}}{\psi_{n}^{(1)}}+\ev{\psi_{m}^{(0)}}{V}{\psi_{n}^{(0)}}-E_{n}^{(1)}\delta_{mn}=0
 	\end{dmath*}
 	\begin{dsuspend}
 		to get $\ket{\psi_{n}^{(1)}}$
 	\end{dsuspend}
 	\begin{dmath*}[]
 		\ket{\psi_{n}^{(1)}}=\sum_{m}^{}\underbrace{\braket{\psi_{m}^{(0)}}{\psi_{n}^{(1)}}}\ket{\psi_{m}^{(0)}}
-		=\sum_{m}^{}\frac{\sand{\psi_{m}^{(0)}}{V}{\psi_{n}^{(0)}}}{E_{n}^{(0)}-E_{m}^{(0)}}\ket{\psi_{m}^{(0)}}+\ket{\psi_{n}^{(0)}}\braket{\psi_{n}^{(0)}}{\psi_{n}^{(1)}}
+		=\sum_{m}^{}\frac{\ev{\psi_{m}^{(0)}}{V}{\psi_{n}^{(0)}}}{E_{n}^{(0)}-E_{m}^{(0)}}\ket{\psi_{m}^{(0)}}+\ket{\psi_{n}^{(0)}}\braket{\psi_{n}^{(0)}}{\psi_{n}^{(1)}}
 	\end{dmath*}
 \end{dgroup*}
