--- a/marcpackages.tex
+++ b/marcpackages.tex
@@ -4,8 +4,6 @@
 %%% To draw sketches
 \usepackage{tikz,tikz-3dplot,pgflibraryshapes}
 \usetikzlibrary{positioning,calc,matrix,chains,scopes,fit,patterns,decorations,decorations.pathmorphing,decorations.pathreplacing,arrows,through,backgrounds}
-%%% Some important extensions like mathclap and iddots
-\usepackage{mathtools}
 %%% To use \bm\mathrm instead of \vec one needs the appropriate greek letters
 \usepackage{upgreek}
 %%% bold math
@@ -18,8 +16,12 @@
 \usepackage{yhmath}
 %%% subfigures, subfloat
 \usepackage{subfig}
+%%% To get nice braces
+\usepackage{yhmath}
+%%% Fancy physics macros (Unfortunately not compatible with breqn)
+%%% \usepackage{physics}
 %%% Automatic line breaking math environments
 \usepackage{flexisym}
 \usepackage{breqn}
-
-
+%%% Some important extensions like mathclap and iddots
+\usepackage{mathtools}
