--- a/marclayout.tex
+++ b/marclayout.tex
@@ -1,12 +1,18 @@
+\checkandfixthelayout
+%\setlength{\trimtop}{0pt}
 %\setlength{\stockheight}{0pt}
 %\setstocksize{10cm}{5cm}
-%\setlrmargins{0cm}{*}{*}
-\setlrmarginsandblock{2.5cm}{*}{*}
-\setulmarginsandblock{4cm}{*}{*}
-\setheadfoot{1cm}{1cm}
-\setheaderspaces{2cm}{*}{*}
-\setlength{\trimtop}{0pt}
-\addtolength{\trimedge}{-\paperwidth}
+\settypeblocksize{2cm}{10cm}{*}
+%\setlrmargins{1cm}{*}{*}
+%\setulmargins{*}{0cm}{*}
+%\setlrmarginsandblock{2cm}{*}{*}
+%\setulmarginsandblock{4cm}{*}{*}
+%\setheadfoot{1cm}{1cm}
+%\setheaderspaces{2cm}{*}{*}
+%\setlength{\trimtop}{0pt}
+%\addtolength{\trimedge}{-\paperwidth}
 %\setlength{\uppermargin}{0.5cm}
 %\setlength{\paperwidth}{3cm}
-%\setlength{\spinemargin}{1cm}
+\setlength{\foremargin}{10cm}
+\setheadfoot{0cm}{0cm}
+%\setheaderspaces{3cm}{*}{*}
