--- a/lectures/q2-13-03-19.tex
+++ b/lectures/q2-13-03-19.tex
@@ -33,18 +33,59 @@ Consider again the evolution operator $\ket{\psi(t)}=U(t,t_0)\ket{\psi(t_0)}$ wi
 \item 
 \begin{dgroup}[]
   \begin{dmath}[]
-  %REPLACE Pdiff
-  
-	i\hbar\Pdiff{}{t}\ket{\psi(t)}&=H(t)\ket{\psi(t)}
+  	i\hbar\pdv{}{t}\ket{\psi(t)}&=H(t)\ket{\psi(t)}
 	\end{dmath}
 	\begin{dmath}[]
-	&=i\hbar\Pdiff{}{t}\ket{\psi(t)}=&H(t)U(t,t_0)\ket{\psi(t_0)}
+	&=i\hbar\pdv{}{t}\ket{\psi(t)}=&H(t)U(t,t_0)\ket{\psi(t_0)}
 	\end{dmath}
 \end{dmath}
 \end{dgroup}
 \end{enumerate}
 
+such that U satisfies:
+\begin{dmath}[]
+i\hbar U(t,t_0)=H(t)U(t,t_0)
+\end{dmath}
+with the formal solution:
+\begin{dmath}[]
+U(t,t_0)=1+\frac{1}{i\hbar}\int_{t_0}\dd{t'}H(t')U(t',t_0)
+\end{dmath}
+Now solve by iteration: $U(t,t_0)=\sum_{n=0}^{\infty}=1+U^{(0)}+\cdots$
+\begin{dgroup}[]
+	\begin{dmath}[]
+	U^{(1)}\ket{t,t_0}&=\frac{1}{i\hbar}\int_{t_0}^t\dd{t_1}H(t_1)
+	\end{dmath}
+	\begin{dmath}[]
+	U^{(2)}\ket{t,t_0}&=\frac{1}{i\hbar}\int_{t_0}^t\dd{t_2}H(t_2)\int_{t_0}^{t_2}\dd{t_1}H(t_1)
+	\end{dmath}
+	\begin{dmath}[]
+	=\frac{1}{2!i\hbar}\int_{t_0}^t\dd{t_1}\dd{t_2}\mathcal{T}(H(t_1)H(t_2))
+	\end{dmath}
+	\end{dmath}
+\end{dgroup}
 
+So we arrive at:
+\begin{dgroup}[]
+	\begin{dmath}[]
+	U^{(n)}(t,t_0)&=(i\hbar)^{-n}\int_{t_0}^t\dd{t_n}H(t_n)\int_{t_0}^{t_n}\dd{t_{n-1}}H(t_{n-1})\cdots\int_{t_0}^{t_2}\dd{t_1}H(t_1) 
+	\end{dmath}
+	\begin{dmath}[]
+	=\frac{1}{n!}(i\hbar)^{-n}\int_{t_0}^t\dd{t_1}\int_{t_0}^t\dd{t_{n-1}}\cdots\int_{t_0}^t\dd{t_1}\mathcal{T}(H(t_n)\ldots H(t_1))
+	\end{dmath}
+\end{dgroup}
+where $\mathcal{T}$ is the \textbf{Time-ordering operator}:
+\begin{dgroup}[]
+	\begin{dmath}[]
+	\mathcal{T}(H(t_n)\ldots H(t_1))=H(t_{\tau(1)})\cdots H(t_{\tau(n)})
+	\end{dmath}
+	
+	\begin{dmath}[]
+	 t_{\tau(1)}>t_{\tau(2)}>\cdots>t_{\tau(n)}
+	\end{dmath}
+\textbf{Full solution}
+\begin{dmath}[]
+U(t,t_0)=\mathcal{T}\left[e^{-\frac{i}{\hbar}\int_{t_0}^tH(t')\dd{t'}}\right]
+\end{dmath}
 
 
 
