--- a/lectures/q2-13-03-19.tex
+++ b/lectures/q2-13-03-19.tex
@@ -1,10 +1,11 @@
+
 \section{Periodic perturbations}
 Let $V(t)=\left(Ve^{-i\omega t}+V^+e^{i\omega t}\right)$ for $t>t_0=0$\\
 The transition probability $P_{i\to f}$ is given by
 \begin{dgroup}[]
 
 \begin{dmath}[]
-  P_{i\to f}&=\frac{1}{\hbar^2}\left|\int_{t_0}^t\dd{t'}
+	P_{i\to f}&=\frac{1}{\hbar^2}\left|\int_{t_0}^t\dd{t'}
 \end{dmath}
 
 \begin{dmath}[]
@@ -25,6 +26,7 @@ Behavior for t large ($t\gg \frac{2\pi}{\omega}$). Recall that ($\sin^2\to \delt
 \Gamma_{i\to f}=\frac{2\pi}{\hbar}\left(|V_{fi}|^2\delta(\underbrace{E_f-E_i-\hbar\omega}_{\stackrel{E_f=E_i+\hbar\omega}{\text{absorbtion } \hbar\omega}})+|V^+_{fi}|^2\delta(\underbrace{E_f-E_i+\hbar\omega}_{\stackrel{E_f=E_i+\hbar\omega}{emmission} \hbar\omega})\right)
 \end{dmath}
 
+
 \section{The interaction picture}
 Consider again the evolution operator $\ket{\psi(t)}=U(t,t_0)\ket{\psi(t_0)}$ with the following properties:
 \begin{enumerate}
@@ -32,15 +34,16 @@ Consider again the evolution operator $\ket{\psi(t)}=U(t,t_0)\ket{\psi(t_0)}$ wi
 \item $U(t,t_1)U(t_1,t_0)=U(t,t_0)$
 \item 
 \begin{dgroup}[]
-  \begin{dmath}[]
-  	i\hbar\pdv{}{t}\ket{\psi(t)}&=H(t)\ket{\psi(t)}
+	\begin{dmath}[]
+	i\hbar\Pdiff{}{t}\ket{\psi(t)}&=H(t)\ket{\psi(t)}
 	\end{dmath}
 	\begin{dmath}[]
-	&=i\hbar\pdv{}{t}\ket{\psi(t)}=&H(t)U(t,t_0)\ket{\psi(t_0)}
+	&=i\hbar\Pdiff{}{t}\ket{\psi(t)}=&H(t)U(t,t_0)\ket{\psi(t_0)}
 	\end{dmath}
 \end{dmath}
 \end{dgroup}
 \end{enumerate}
+
 
 such that U satisfies:
 \begin{dmath}[]
@@ -88,6 +91,79 @@ U(t,t_0)=\mathcal{T}\left[e^{-\frac{i}{\hbar}\int_{t_0}^tH(t')\dd{t'}}\right]
 \end{dmath}
 
 
+\section{The adiabatic approximation}
+Here $V(t)$ is not small but changes \textit{slowly}.\\
+ADD PICTURES\\
+\newline
+\begin{shaded}
+\textbf{Theorem}\\
+For an \textbf{adiabatic change} $H_i\to H_f$, a system that is initially in the n-th eigenstate of $H_i$ will evolve into into the n-th eigenstate of $H_f$ (no level crossings)
+\end{shaded}
+\textbf{Proof:}\\
+Let $H(t)=E_n(t)\ket{\psi_n(t)}$
+\begin{dgroup}[]
+	\begin{dmath}[]
+	\ket{\psi(t)}&=\sum_{n}c_n(t)\underbrace{e^{(i\hbar)^{-1}\int_0^tE_n(\tau)\dd{\tau}}}_{e^{i\varepsilon_n}}\ket{\psi_n(t)}
+	\end{dmath}
+	\begin{dmath}[]
+	=\sum_{n}c_n(t)e^{i\varepsilon_n}\ket{\psi_n(t)}
+	\end{dmath}
+\end{dgroup}
+Plug into Schrödinger equation:
+\begin{dmath}[]
+i\hbar\sum_{n}\left(\dot{c}_n\ket{\psi_n}+c_n\ket{\dot{\psi}_n}+ic_n\dot{\varepsilon}_n\ket{\psi_n}\right)=\sum_nc_ne^{i\varepsilon_n}H\ket{\psi_n}
+\end{dmath}
+Multiply by $\bra{\psi_m}$
+\begin{dmath}[]
+\dot{c}_m=-\varepsilon c_n\underbrace{\braket{\psi_m|\dot{\psi}_n}}_{\text{compute}} e^{i(\varepsilon_n-\varepsilon_m)}
+\end{dmath}
+Now for $m\neq n$
+\begin{dgroup}[]
+	\begin{dmath}[]
+	H\ket{\psi_n}=E_n\ket{\psi_n}
+	\end{dmath}
+	\begin{dmath}[]
+	\dot{H}\ket{\psi_n}+H\ket{\dot{\psi_n}}=\dot{E}_n\ket{\psi_n}+E_n\ket{\dot{\psi}_n}
+	\end{dmath}
+	\begin{dmath}[]
+	\braket{\psi_m|\dot{H}|\psi_n}=(E_n-E_m)\braket{\psi_m|\dot{\psi}_n}
+	\end{dmath}
+\end{dgroup}
+Put into equation for $\dot{c}_m$
+\begin{dmath}[]
+\dot{c}_m=-c_m\braket{\psi_m|\dot{\psi}_m}-\sum_{n\neq m}c_n\frac{\braket{\psi_m|\dot{H}|\psi_n}}{E_n-E_m}e^{i(\varepsilon_n-\varepsilon_m)}
+\end{dmath}
+where the last sum is an adiabatic approximation for $\dot{H}$ small $\to 0$ and also must not have degeneracy.
+\begin{dgroup}[]
+	\begin{dmath}[]
+	\dot{c}_m(t)=-c_m\braket{\psi_m|\dot{\psi}_m}
+	\end{dmath}
+	\begin{dmath}[]
+	c_m(t)=c_m(t_0)e^{i\gamma_m(t)} \quad \gamma_m=i\int_{t_0}^{t}\dd{\tau}\braket{\psi_m(\tau)|\dot{\psi}_m(\tau)}
+	\end{dmath}
+\end{dgroup}
+If the system is in state $\psi_m$ at time $t$, $H$ remains in this state
+\begin{dgroup}[]
+	\begin{dmath}[]
+	\psi(t)&=c_m(t)e^{i\varepsilon_m(t)}\ket{\psi_m(t)}
+	\end{dmath}
+	\begin{dmath}[]
+	=e^{i\gamma_m(t)}e^{i\varepsilon_m(t)}\ket{\psi_m(t)}
+	\end{dmath}
+\end{dgroup}
+where $e^{i\gamma_m(t)}$ is the geometric phase and $e^{i\varepsilon_m(t)}$ the dynamic phase.
+(Berry phase)
 
+\section{Interaction of matter with classical radiation}
+Here, radiation is treated as a classical fild
+\section{Basics from EM and QM I}
+External classical field $\vtr B=\nabla \times \vtr A$, $\vtr E=-\nabla\phi-\dot{\vtr{A}}$\\
+(in relativity, $\phi,\vtr A\to A^\mu$)\\
 
-
+Physics is invariant under gauge tranformations:
+\begin{dmath}[]
+A^\mu\to A^\mu+\gamma^\mu\chi\begin{cases}
+\vtr A\to \vtr A+\nabla\chi(\vtr r, t)\\
+\phi \to \phi-\frac{1}{c}\dot{\chi}(\vtr r,t)
+\end{cases}
+\end{dmath}
