--- a/lectures/q2-13-02-19.tex
+++ b/lectures/q2-13-02-19.tex
@@ -1,3 +1,5 @@
+\chapter*{Introduction}
+These are my lecture notes of the lecture. You are welcome to tell any mistakes to: mmaetz AT student.ethz.ch. Unfortunately, some lectures are missing because lenovo/IBM is incompetent to give me a working laptop (thinkpad) after two months (even after about 30 e-mails and 10 phone calls).
 \chapter{Approximation methods for stationary problems}
 \begin{itemize}
 	\item standard QM problem:
