--- a/lectures/q2-13-03-07.tex
+++ b/lectures/q2-13-03-07.tex
@@ -1,5 +1,23 @@
 \chapter{Many Electron Atoms}
-Consider Atom with $N$ electrons
+%\section{Spin-statisticts theorem}
+%Particle with integer spin (bosons) are described by symmetric wave functions, particle with half-integer spins (fermions) are described by anti-symmetric wavefunctions.
+%
+%Look at $n$ non-interacting identical particles
+%\begin{dmath}[]
+%	\psi\left( 1,\ldots,N \right)\prod_{i=1}^{N}\psi_i(i)
+%\end{dmath}
+%\begin{description}
+%	\item[bosonic case:]
+%		\begin{dmath}[]
+%			\psi_S\left( 1,\ldots,N \right)=\sum_{p\in S_N}^{}\psi_1\left( P(1) \right)\ldots \psi_N\left( P(N) \right)
+%		\end{dmath}
+%	\item[fermionic case] 
+%		\begin{dmath}[]
+%			\psi_A\left( 1,\ldots,N \right)=\frac{1}{\sqrt{N!}}\sum_{P\in S_N}^{}\left( -1 \right)^{P}\psi_1\left( P(1) \right)\ldots \psi_{N}\left( P(N) \right)
+%		\end{dmath}
+%		$\psi_A$ can be written as Slater determinant
+%\end{description}
+%Consider Atom with $N$ electrons
 \begin{dmath}[]
 	H=\sum_{i=1}^{N}\left( \frac{p^2}{2m}-\frac{Ze^2}{r} \right)+\underbrace{\sum_{i>j}^{}\frac{e^2}{\abs{\vtr{r}_i-\vtr{r}_j}}}_{\footnotemark}
 \end{dmath}
