--- a/lectures/q2-13-05-02.tex
+++ b/lectures/q2-13-05-02.tex
@@ -1,7 +1,4 @@
-%\begin{dmath}[]
-	%V_{\beta\alpha}^{(1)}=\frac{2e^2\hbar\pi}{m\sqrt{\omega_i\omega_f}}\vtr{\upepsilon}\left( k_i,\lambda_i \right)\cdot \vtr{\upepsilon}^{*}(k_f,\lambda_f)\ldots
-%\end{dmath}
-Recalls from section 7.2
+Recall from section 7.2
 \begin{dgroup}[]
 	\begin{dmath}[]
 		H=H_0+V
