--- a/lectures/q2-13-05-23.tex
+++ b/lectures/q2-13-05-23.tex
@@ -1,6 +1,6 @@
 Compute $i[S,H]$:
 \begin{dgroup}[]
-  \begin{dmath}[]
+	\begin{dmath}[]
 &i[S,H]=i[-\frac{i\beta}{2mc^2}\mathcal{O},\beta mc^2+\mathcal{O}+\varepsilon]\\
 &=\frac{\beta}{2mc^2}[\mathcal{O},\varepsilon]\\
 	\end{dmath}
@@ -9,7 +9,7 @@ Compute $i[S,H]$:
 	=2\beta\mathcal{O}^2
 	\end{dmath}
 	\begin{dmath}[]
-	[\mathcal{\beta\mathcal{O},\beta}]=c[\beta\vb{\alpha},\beta]\left(\vb{p}+\frac{e}				{c}\vb{A}\right)=-2\mathcal{O}
+	[\mathcal{\beta\mathcal{O},\beta}]=c[\beta\vtr{\alpha},\beta]\left(\vtr{p}+\frac{e}				{c}\vtr{A}\right)=-2\mathcal{O}
 	\end{dmath}
 \end{dgroup}
 
@@ -54,7 +54,7 @@ where
 \begin{dmath}[]
 \clubsuit &=\alpha_i\alpha_j\nabla_iE_j-\alpha_j\alpha_iE_j\nabla_i\\
 &=\nabla\vtr{E}+i\vtr{\sigma}(\nabla\times\vtr{E})-\vtr{E}\cdot\nabla-i\vtr{\sigma}(\vtr{E}\times\nabla)\\
-&=[\nabla,\vtr{E}-2i\vtr{\sigma}(\vtr{E}\times\nabla)+i\vtr{\sigma}(\nabla\times\vtr{E})
+&=[\nabla,\vtr{E}]-2i\vtr{\sigma}(\vtr{E}\times\nabla)+i\vtr{\sigma}(\nabla\times\vtr{E})
 \end{dmath}
 
 such that we have
