--- a/lectures/q2-13-02-19.tex
+++ b/lectures/q2-13-02-19.tex
@@ -1,5 +1,12 @@
 \chapter*{Introduction}
 These are my lecture notes of the lecture. You are welcome to tell any mistakes to: mmaetz AT student.ethz.ch. Unfortunately, some lectures are missing because lenovo/IBM is incompetent to give me a working laptop (thinkpad) after two months (even after about 30 e-mails and 10 phone calls).
+\begin{description}
+	\item[Missing lectures]
+		\begin{itemize}
+			\item 9th April
+			\item 23th Mai
+		\end{itemize}
+\end{description}
 \chapter{Approximation methods for stationary problems}
 \begin{itemize}
 	\item standard QM problem:
@@ -27,7 +34,7 @@ Assume:
 \begin{dmath}[]
 	H=H_0+\lambda V
 \end{dmath}
-with $H_0$ the Hamiltonian that I can solve (``free'' Hamiltonian) and the perturbation $V$ ``small'' and $\lambda$ a dimensionless bookkeeping par.
+with $H_0$ the Hamiltonian that I can solve (``free'' Hamiltonian) and the perturbation $V$ ``small'' and $\lambda$ a dimensionless bookkeeping part.
 \begin{dgroup*}[]
 	\begin{dmath*}[]
 		\lambda\to 0 \condition*{H\to H_0}
