--- a/lectures/q2-13-04-11.tex
+++ b/lectures/q2-13-04-11.tex
@@ -25,13 +25,12 @@ Confluent hypogeometric equation$\to$
 		\gamma=\frac{m Z_1Z_2e^2}{\hbar^2k}
 	\end{dmath}
 	\begin{dmath}[]
-		%\psi_{\ell}(r)\xrightarrow[r\to \infty]{\vtr{k}=k\vtr{e}_z}
+		\psi_{\ell}(r)\xrightarrow[r\to \infty]{\vtr{k}=k\vtr{e}_z}
 		\underbrace{e^{i\left( kz+\gamma\log 2k\left( r-z \right) \right)}}_{\text{distorted plane wave}}
 		-\frac{\gamma}{2k\sin^2\frac{\vartheta}{2}}
-		\frac{\Gamma\left( 1+\gamma \right)}{1-i\gamma}e^{-i\gamma\log\left( \sin\frac{2\vartheta}{2} \right)}\underbrace{\frac{e^{i\left( kr-\gamma\log 2kr \right)}}{2}}_{\text{distorted outgoing plane wave}}
+		\frac{\Gamma\left( 1+\gamma \right)}{\Gamma\left( 1-i\gamma \right)}e^{-i\gamma\log\left( \sin\frac{2\vartheta}{2} \right)}\underbrace{\frac{e^{i\left( kr-\gamma\log 2kr \right)}}{2}}_{\mathclap{\text{distorted outgoing plane wave}}}
 	\end{dmath}
 \end{dgroup}
-\ldots
 This looks the same as
 \begin{dmath}[]
 	\psi\left( \vtr{r} \right)=e^{i\vtr{k}\vtr{r}}+f(\vartheta)\frac{e^{ikr}}{r}
